src/test/deca/context/valid/created/exp_bin/op_arith/minus.deca
// Description :
//    test de la soustraction
//
// Resultats :
//		Ok

{
int a;
float b;
a = 1 - 2;
a = 3 - a; 
b = 1 - 1;
b = 0.5 - 2; 
b = 2.0 - 3.0; 
b = 2 - 0.5; 
b = a - b; 
b = b - (a - 2); 
b = (0.5 - b) - 0.5; 
a = a - a;
}