src/test/deca/context/invalid/created/binary_exp/op_arith/modulo_float_bool.deca
// Description :
//    test modulo entre un float et un boolen
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type float. L’opérande droite est de type bool. Or les opérandes d’un modulo doivent être de type ‘int’

{
float a;
boolean b;
int c = a % b;
}